# adaptive-meta-ensemble

./: .gitignore  AME_research_paper.md  Contribution.md  MANIFEST.in  QUICK_START.md  README.md  adaptive_meta_ensemble.py  ame_pro.py  benchmark_suite.py  classification_benchmarks.csv  comprehensive_benchmark.py  demo_ame.py  pyproject.toml  setup.py
docs/: EXECUTIVE_SUMMARY.md  PUBLICATION_GUIDE.md
results/: regression_benchmarks.csv
